--- a/index.html
+++ b/index.html
@@ -2,60 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>koldanJS</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="html, css, course">
+    <meta name="description" content="Это базовый курс по HTML и CSS">
+    <title>Анкета: koldanJS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <div class="info">
-            <img src="https://pbs.twimg.com/profile_images/1450471285/DSC00644.JPG"
-            alt="Колодкин Даниил"
-            class="avatar">
+        <header class="info">
+            <img src="./avatar.jpg" alt="Колодкин Даниил" class="avatar">
             <div class="info-text">
                 <h1>Колодкин Даниил</h1>
-                <p>Я вечно <strong>учусь</strong></p>
-                <p>Мне нравится учиться</p>
+
+                <p>Постоянно учусь и мне это нравится: универ, магистратура, аспирантура, преподавание, наука. Направление инженер-технолог, но залезть могу и в моделирование и видеомонтаж или программирование.</p>
+                <p>Жизнь переменилась и теперь я учусь на веб-разработчика и не собираюсь отступать от своей цели!</p>
+
                 <h4>Мои социальные сети</h4>
-                <a href="https://telegram.org/">Telegram</a>
-                |
-                <a href="https://vk.com/feed">Vk</a>
-        </div>
-        </div>
-        <div class="card bg-yellow">
-        <h2>Мои хобби</h2>
-        <ol class="list">
-            <li></li>
-            <li></li>
-            <li></li>
-        </ol>
-        </div>
-        <div class="card bg-green">
-        <h2>Опыт работы</h2>
-        <table class="table">
-            <tr>
-                <td>bdfgb</td>
-                <td>gf</td>
-                <td>2018</td>
-            </tr>
-            <tr>
-                <td>bdfgbrtyr</td>
-                <td>gyf</td>
-                <td>2020</td>
-            </tr>
-        </table>
-        </div>
-        <div class="card bg-red">
-        <h2>youtube курсы</h2>
-        <ul class="link-list">
-            <li><a href="https://www.youtube.com/">
-                курс 1</a></li>
-            <li><a href="https://www.youtube.com/">
-                курс 2</a></li>
-            <li><a href="https://www.youtube.com/">
-                курс 3</a></li>
-        </ul>
-        </div>
-        <div class="contact">
+                <a href="https://vk.com/id112283518">Vk</a>
+                <span> | </span>
+                <a href="https://t.me/koldanJS">Telegram</a>
+                <span> | </span>
+                <a href="https://www.youtube.com/user/MrKolotushkin">YouTube</a>
+
+            </div>
+        </header>
+        <section>
+            <div class="card bg-yellow">
+                <h2>Мои хобби</h2>
+                <ol class="list">
+                    <li><strong>Обучение.</strong> Ценю знания и очень интересуюсь как наукой, так и в целом миропознанием, а что, как ни наука, позволяет познать мир ...</li>
+                    <li><strong>Астрономия.</strong> Всегда я задирал голову к звездам. Люблю ночью выйти из дома с телескопом и полным термосом кофе.</li>
+                    <li><strong>Вкусная еда.</strong> Люблю ее готовить, люблю смотреть как готовят, люблю кушать</li>
+                    <li><strong>Кино.</strong> Не могу жить без хорошего кино с сильным сюжетом, хорошим антуражным звуком и режиссурой</li>
+                </ol>
+            </div>
+            <div class="card bg-green">
+                <h2>Опыт работы</h2>
+                <table class="table">
+                    <thead>
+                        <th>Компания</th>
+                        <th>Должность</th>
+                        <th>Период</th>
+                    </thead>
+                    <tr>
+                        <td>Различная подработка</td>
+                        <td>подсобный рабочий</td>
+                        <td>2008-2013</td>
+                    </tr>
+                    <tr>
+                        <td>БГТУ (технологический университет)</td>
+                        <td>ассистент кафедры</td>
+                        <td>2018-2021</td>
+                    </tr>
+                </table>
+            </div>
+        </section>
+        <footer class="contact">
             <h2>Связаться со мной</h2>
             <form action="/">
                 <div class="row">
@@ -80,8 +84,7 @@
             <div class="position">
                 <div class="box"></div>
             </div>
-        </div>
-        <div style="margin-bottom: 500px;"></div>
+        </footer>
     </div>
 </body>
 </html>
