Links fixed, table added

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <p>Жизнь переменилась и теперь я учусь на веб-разработчика и не собираюсь отступать от своей цели!</p>
 
                 <h4>Мои социальные сети</h4>
-                <a href="https://vk.com/id112283518">Vk</a>
+                <a href="https://vk.com/id112283518" target="_blank">Vk</a>
                 <span> | </span>
-                <a href="https://t.me/koldanJS">Telegram</a>
+                <a href="https://t.me/koldanJS" target="_blank">Telegram</a>
                 <span> | </span>
-                <a href="https://www.youtube.com/user/MrKolotushkin">YouTube</a>
+                <a href="https://www.youtube.com/user/MrKolotushkin" target="_blank">YouTube</a>
 
             </div>
         </header>
@@ -47,9 +47,14 @@
                         <th>Период</th>
                     </thead>
                     <tr>
-                        <td>Различная подработка</td>
+                        <td>Строительная подработка</td>
                         <td>подсобный рабочий</td>
                         <td>2008-2013</td>
+                    </tr>
+                    <tr>
+                        <td>Различная подработка</td>
+                        <td>разное</td>
+                        <td>2013-2018</td>
                     </tr>
                     <tr>
                         <td>БГТУ (технологический университет)</td>
